2008-08-01  Neil Roberts  <neil@o-hand.com>

	* clutter/rbclttimeline.c (rbclt_timeline_init): Define the
	Clutter::Timeline::Direction class

2008-08-01  Neil Roberts  <neil@o-hand.com>

	* clutter/rbcltstage.c: Update to 0.8

	* clutter/rbcltfog.c.in: Wrapper for ClutterFog

	* clutter/rbclutter.c (Init_clutter): Call rbclt_fog_init

	* clutter/extconf.rb: Add the fog boxed type

2008-07-30  Neil Roberts  <neil@o-hand.com>

	* clutter/rbcltmain.c: Update to 0.8 API

	* README: Add a note about clutter_threads_enter/leave.

2008-07-30  Neil Roberts  <neil@o-hand.com>

	* clutter/rbcltmodel.c: Bindings for ClutterModel

	* clutter/rbcltlistmodel.c: Bindings for ClutterListModel

	* clutter/extconf.rb: Added rbcltlistmodel.o and rbcltmodel.o

	* clutter/rbclutter.c: Call rbclt_model_init and
	rbclt_list_model_init.

2008-07-27  Neil Roberts  <neil@o-hand.com>

	* clutter/rbclutter.c (Init_clutter): Only define
	GLib::ConnectFlags if it's not already there. This fixes a warning
	with later versions of the GLib bindings.

2008-07-27  Neil Roberts  <neil@o-hand.com>

	* extra/fetchkeysyms.el: 
	* clutter/rbcltkeysyms.c: Move the automatic keysym generation
	code to a separate file. Generate the syms as two arrays, one as a
	single string containing the names separated by NULs, the other an
	array of VALUEs. The constants are defined in a loop instead of
	having a separate call for each constant. This should reduce the
	size of the binary and the number of symbols in the library.

2008-07-26  Neil Roberts  <neil@o-hand.com>

	* clutter/rbclttimeline.c: Update to include the marker functions.

2008-07-26  Neil Roberts  <neil@o-hand.com>

	* extra/mkmethod.el (mkmethod): Include lines that have been split
	into two when searching for the last rb_define_method call. If the
	new rb_define_method line is longer than 80 characters then split
	it into two. Include extra newlines in the method definition.

2008-07-25  Neil Roberts  <neil@o-hand.com>
